Start adding more swagger documentation
